[project]
name = "log-archive-tool"
version = "0.1.0"
description = "Утилита командной строки для архиваирования логов"
readme =  "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Halfy"}
]
dependencies = ["click"]

[project.scripts]
log-archive = "log_archive.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["log_archive"]